add prost tcp recv example

--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "prost_build_example",
         "prost_example",
         "prost_route_msg_example",
+        "prost_tcp_recv_example",
 ]
