--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -5,6 +5,6 @@ resolver = "2"
 members = [
         "prost_build_example",
         "prost_example",
-        "prost_route_msg_example",
+        "prost_tcp_send_msg_example",
         "prost_tcp_recv_example",
 ]
