--- a/io_cursor_workspace_example/Cargo.toml
+++ b/io_cursor_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "io_cursor_read_struct_example",
         "io_cursor_split_example",
         "cursor_seek_split_example",
+        "cursor_bytes_get_u32_example",
 ]
