--- a/tokio_workspace_example/tokio_oneshot_timeout_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_oneshot_timeout_example/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.8.5"
 tokio = { version = "1.29.1", features = ["full"] }
