--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -141,4 +141,5 @@ members = [
         "tokio_tls_download_rust_lang_example",
         "tokio_spawn_bg_task_example",
         "tokio_oneshot_timeout_example",
+        "tokio_mpsc_oneshot_example",
 ]
