--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -148,4 +148,5 @@ members = [
         "tokio_clap_subcommand_example",
         "tokio_clap_subcommand_chrono_example",
         "tokio_select_joinhandler_example",
+        "tokio_notify_ctrl_c_example",
 ]
