--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "prost_example",
         "prost_tcp_send_msg_example",
         "prost_tcp_recv_example",
+        "prost_encode_length_delimited_example",
 ]
