--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -150,4 +150,5 @@ members = [
         "tokio_select_joinhandler_example",
         "tokio_notify_ctrl_c_example",
         "tokio_turmoil_grpc_example",
+        "tokio_turmoil_axum_example",
 ]
