--- a/chitchat_example/Cargo.toml
+++ b/chitchat_example/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
+anyhow = "1.0.75"
 # chitchat = "0.5.0"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
+clap = { version = "4.3.21", features = ["derive"] }
 cool-id-generator = "1.0.1"
 env_logger = "0.10.0"
 once_cell = "1.18.0"
 poem = "1.3.57"
 poem-openapi = { version = "3", features = ["swagger-ui"] }
-serde = { version = "1.0.182", features = ["derive"] }
-serde_json = "1.0.104"
-structopt = "0.3.26"
-tokio = { version = "1.29.1", features = ["full"] }
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
+tokio = { version = "1.32.0", features = ["full"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 
