--- a/once_cell_chitchat_example/Cargo.toml
+++ b/once_cell_chitchat_example/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 once_cell = "1.18.0"
-tokio = { version = "1.29.1", features = ["full"] }
+tokio = { version = "1.32.0", features = ["full"] }
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
 cool-id-generator = "1.0.1"
-anyhow = "1.0.72"
-serde = { version = "1.0.182", features = ["derive"] }
-serde_json = "1.0.104"
-structopt = "0.3.26"
+anyhow = "1.0.75"
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
+clap = { version = "4.3.21", features = ["derive"] }
