--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -6,17 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.1.0"
-async-trait = "0.1.57"
-clap = { version = "3.2.16", features = ["derive", "env"] }
-env_logger = "0.9.0"
-# openraft = "0.6.7"
+actix-web = "4.3.1"
+async-trait = "0.1.73"
+clap = { version = "4.3.23", features = ["derive", "env"] }
+env_logger = "0.10.0"
+
 #openraft = { version = "0.6", path = "../../openraft", features = ["serde"] }
-openraft = {version= "0.8.3", features = ["serde"]}
-# openraft = { version = "0.6", , features = ["serde"] }
-reqwest = { version = "0.11.11", features = ["json"] }
-serde = { version = "1.0.143", features = ["derive"] }
-serde_json = "1.0.83"
-tokio = { version = "1.20.1", default-features = false, features = ["sync"] }
-tracing = "0.1.36"
+# openraft = {version= "0.8.3", features = ["serde"]}
+openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde"]}
+reqwest = { version = "0.11.18", features = ["json"] }
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
+tokio = { version = "1.32.0", default-features = false, features = ["sync"] }
+tracing = "0.1.37"
 tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
