--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocksdb = "0.19.0"
+rocksdb = "0.21.0"
 tide = "0.16.0"
 async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
-async-trait = "0.1.57"
-clap = { version = "3.2.16", features = ["derive", "env"] }
-tracing-subscriber = "0.3.15"
-openraft = { version = "0.8.3", features = ["serde"] }
-# openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
-reqwest = { version = "0.11.11", features = ["json"] }
-serde = { version = "1.0.143", features = ["derive"] }
-serde_json = "1.0.83"
-tracing = "0.1.36"
+async-trait = "0.1.73"
+clap = { version = "4.3.23", features = ["derive", "env"] }
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+# openraft = { version = "0.8.3", features = ["serde"] }
+openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
+reqwest = { version = "0.11.18", features = ["json"] }
+serde = { version = "1.0.183", features = ["derive"] }
+serde_json = "1.0.105"
+tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toy-rpc = { version = "0.8.6", features = [
   "ws_async_std",
