--- a/once_cell_chitchat_example/Cargo.toml
+++ b/once_cell_chitchat_example/Cargo.toml
@@ -14,3 +14,4 @@ anyhow = "1.0.75"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
 clap = { version = "4.4.0", features = ["derive"] }
+console-subscriber = "0.1.10"
