--- a/once_cell_arc_example/Cargo.toml
+++ b/once_cell_arc_example/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.1", features = ["derive"] }
 once_cell = "1.18.0"
