--- a/chitchat_example/Cargo.toml
+++ b/chitchat_example/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+axum = "0.6.20"
 # chitchat = "0.5.0"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
 clap = { version = "4.3.21", features = ["derive"] }
+console-subscriber = "0.1.10"
 cool-id-generator = "1.0.1"
 env_logger = "0.10.0"
 once_cell = "1.18.0"
