--- a/libp2p_workspace_example/libp2p_dcutr_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_dcutr_example/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.3.23", features = ["derive"] }
+clap = { version = "4.4.2", features = ["derive"] }
 env_logger = "0.10.0"
 futures = "0.3.28"
 futures-timer = "3.0"
-libp2p = { version = "0.52.2", features = ["full"] }
+libp2p = { version = "0.52.3", features = ["full"] }
 log = "0.4"
-libp2p-quic = { version = "0.9.2-alpha", features = ["tokio"] }
+libp2p-quic = { version = "0.9.2", features = ["tokio"] }
