--- a/libp2p_workspace_example/libp2p_tokio_relay_server_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_relay_server_example/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.73"
-clap = { version = "4.3.23", features = ["derive"] }
+clap = { version = "4.4.2", features = ["derive"] }
 env_logger = "0.10.0"
 futures = "0.3.28"
-libp2p = { version = "0.52.2", features = ["full"] }
-libp2p-quic = { version = "0.9.2-alpha", features = ["tokio"] }
+libp2p = { version = "0.52.3", features = ["full"] }
+libp2p-quic = { version = "0.9.2", features = ["tokio"] }
 tokio = { version = "1.32.0", features = ["full"] }
