--- a/surrealdb_tikv_example/Cargo.toml
+++ b/surrealdb_tikv_example/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.188", features = ["derive"] }
-surrealdb = { version = "1.0.0-beta.11", features = ["kv-tikv", "kv-mem"] }
+surrealdb = { version = "1.0.0", features = ["kv-tikv", "kv-mem"] }
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
