--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -157,4 +157,5 @@ members = [
         "tokio_turmoil_axum_example",
         "tokio_udp_heartbeat_example",
         "tokio_metrics_example",
+        "tokio_broadcast_example2",
 ]
