--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -77,6 +77,7 @@ members = [
         "tokio_sync_barrier_example",
         "tokio_once_cell_example",
         "tokio_oneshot_fuse_example",
+        "tokio_futures_fuse_example",
         "tokio_pin_example",
         "tokio_rand_example",
         "tokio_rand_time_tick_example",
