--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -5,5 +5,6 @@ resolver = "2"
 members = [
         "dioxus_example",
         "dioxus_web_basic_example",
+        "dioxus_liveview_example",
         "dioxus_fermi_example",
 ]
