--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -7,5 +7,6 @@ members = [
         "dioxus_web_basic_example",
         "dioxus_liveview_example",
         "dioxus_fullstack_example",
+        "dioxus_desktop_example",
         "dioxus_fermi_example",
 ]
