--- a/dioxus_workspace_example/Cargo.toml
+++ b/dioxus_workspace_example/Cargo.toml
@@ -8,5 +8,6 @@ members = [
         "dioxus_liveview_example",
         "dioxus_fullstack_example",
         "dioxus_desktop_example",
+        "dioxus_mobile_example",
         "dioxus_fermi_example",
 ]
