--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -8,21 +8,22 @@ edition = "2021"
 [dependencies]
 rocksdb = "0.21.0"
 tide = "0.16.0"
-async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
+# async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.73"
-clap = { version = "4.3.23", features = ["derive", "env"] }
+clap = { version = "4.4.3", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 # openraft = { version = "0.8.3", features = ["serde"] }
 openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
-reqwest = { version = "0.11.18", features = ["json"] }
-serde = { version = "1.0.183", features = ["derive"] }
-serde_json = "1.0.105"
+reqwest = { version = "0.11.20", features = ["json"] }
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 tracing = "0.1.37"
 tracing-futures = "0.2.5"
 toy-rpc = { version = "0.8.6", features = [
-  "ws_async_std",
+  "ws_tokio",
   "server",
   "client",
-  "async_std_runtime",
+  "tokio_runtime",
 ] }
 byteorder = "1.4.3"
+tokio = { version = "1.32.0", features = ["full"] }
