--- a/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_rocksdb/Cargo.toml
@@ -10,7 +10,7 @@ rocksdb = "0.21.0"
 tide = "0.16.0"
 # async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.73"
-clap = { version = "4.4.3", features = ["derive", "env"] }
+clap = { version = "4.4.4", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 # openraft = { version = "0.8.3", features = ["serde"] }
 openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
@@ -27,3 +27,4 @@ toy-rpc = { version = "0.8.6", features = [
 ] }
 byteorder = "1.4.3"
 tokio = { version = "1.32.0", features = ["full"] }
+console-subscriber = "0.1.10"
