add axum handle parameter example

--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -19,4 +19,5 @@ members = [
         "axum_websocket_server_example",
         "axum_websocket_client_example",
         "axum_echo_example",
+        "axum_handle_parameter_example",
 ]
