add prost name trait example

--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "prost_tcp_send_msg_example",
         "prost_tcp_recv_example",
         "prost_encode_length_delimited_example",
+        "prost_name_trait_example",
 ]
