--- a/prost_workspace_example/prost_name_trait_example/Cargo.toml
+++ b/prost_workspace_example/prost_name_trait_example/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 prost = "0.12.1"
 tokio = { version = "1.33.0", features = ["full"] }
 prost-types = "0.12.1"
+once_cell = "1.18.0"
 
 [build-dependencies]
 prost-build = { git = "https://github.com/tinrab/prost", branch = "include-type-names" }
