add macro in other file example

--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -20,4 +20,5 @@ members = [
         "macro_length_example",
         "derive_hello_example",
         "derive_hello2_example",
+        "macro_in_other_file_example",
 ]
