--- a/axum_workspace_example/axum_login_example/Cargo.toml
+++ b/axum_workspace_example/axum_login_example/Cargo.toml
@@ -6,9 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.68"
-axum = "0.6.18"
-axum-login = "0.5.0"
+askama = { version = "0.12.1", features = ["with-axum"] }
+askama_axum = "0.3.0"
+async-trait = "0.1.74"
+axum = "0.6.20"
+axum-login = "0.7.0"
+http = "0.2.9"
+hyper = "0.14.27"
+password-auth = "1.0.0"
 rand = { version = "0.8.5", features = ["min_const_gen"] }
-serde = { version = "1.0.164", features = ["derive"] }
-tokio = { version = "1.29.1", features = ["full"] }
+reqwest = { version = "0.11.22", features = ["cookies"] }
+serde = { version = "1.0.192", features = ["derive"] }
+sqlx = { version = "0.7.2", features = ["sqlite", "time", "runtime-tokio"] }
+time = "0.3.30"
+tokio = { version = "1.33.0", features = ["full"] }
+tower = "0.4.13"
+tower-sessions = "0.4.1"
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+urlencoding = "2.1.3"
