--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 members = [
         "axum_example1",
-        # "axum_sessions_auth_example",
+        "axum_sessions_auth_example",
         "axum_example",
         "axum_server_example",
         "axum_type_safe_routing_example",
