--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -11,7 +11,7 @@ members = [
         "axum_style_magic_function_params_example",
         "axum_login_example",
         "axum_simple_router_example",
-        # "axum_stream_protobuf_example",
+        "axum_stream_protobuf_example",
         "axum_post_example",
         "axum_prost_server_example",
         "reqwest_prost_client_example",
