--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -20,4 +20,5 @@ members = [
         "axum_websocket_client_example",
         "axum_echo_example",
         "axum_handle_parameter_example",
+        "axum_prost_post_echo_example",
 ]
