--- a/prost_workspace_example/prost_name_trait_example/Cargo.toml
+++ b/prost_workspace_example/prost_name_trait_example/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 
 [dependencies]
 prost = "0.12.1"
-tokio = { version = "1.33.0", features = ["full"] }
+tokio = { version = "1.34.0", features = ["full"] }
 prost-types = "0.12.1"
 once_cell = "1.18.0"
 bytes = "1.5.0"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/tinrab/prost", branch = "include-type-names" }
+prost-build = { git = "https://github.com/tokio-rs/prost"}
