add prost_build walkdir example

--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "prost_tcp_recv_example",
         "prost_encode_length_delimited_example",
         "prost_name_trait_example",
+        "prost_build_walkdir_example",
 ]
