--- a/prost_workspace_example/Cargo.toml
+++ b/prost_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "prost_encode_length_delimited_example",
         "prost_name_trait_example",
         "prost_build_walkdir_example",
+        "prost-wkt-example",
 ]
