add reqwest tokio_stream example

--- a/reqwest_workspace_example/Cargo.toml
+++ b/reqwest_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "reqwest_post_example",
         "reqwest_streams_example",
+        "reqwest_tokio_stream_example",
 ]
