add vec drain and truncate example

--- a/vec_workspace_example/Cargo.toml
+++ b/vec_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "ref_mut_vec_example",
         "vec_ref_raw_pointer",
         "vec_ref_raw_pointer",
+        "vec_drain_truncate_example",
 ]
