--- a/axum_workspace_example/axum_stream_protobuf_example/Cargo.toml
+++ b/axum_workspace_example/axum_stream_protobuf_example/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2021"
 [dependencies]
 axum = "0.6.20"
 axum-streams = { version = "0.10.0", features = ["protobuf"] }
-prost = "0.12.1"
-prost-types = "0.12.1"
+prost = "0.12.2"
+prost-types = "0.12.2"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-stream = "0.1.14"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/tokio-rs/prost"}
+prost-build = "0.12.2"
 walkdir = "2.4.0"
