--- a/prost_workspace_example/prost_build_walkdir_example/Cargo.toml
+++ b/prost_workspace_example/prost_build_walkdir_example/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.34.0", features = ["full"] }
-prost = { git = "https://github.com/tokio-rs/prost"}
-prost-types = "0.12.1"
+prost = "0.12.2"
+prost-types = "0.12.2"
 once_cell = "1.18.0"
 bytes = "1.5.0"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/tokio-rs/prost"}
+prost-build = "0.12.2"
 walkdir = "2.4.0"
