--- a/prost_workspace_example/prost_name_trait_example/Cargo.toml
+++ b/prost_workspace_example/prost_name_trait_example/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.12.1"
+prost = "0.12.2"
 tokio = { version = "1.34.0", features = ["full"] }
-prost-types = "0.12.1"
+prost-types = "0.12.2"
 once_cell = "1.18.0"
 bytes = "1.5.0"
 
 [build-dependencies]
-prost-build = { git = "https://github.com/tokio-rs/prost"}
+prost-build = "0.12.2"
