--- a/libp2p_workspace_example/libp2p_dcutr_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_dcutr_example/Cargo.toml
@@ -13,3 +13,6 @@ futures-timer = "3.0"
 libp2p = { version = "0.52.3", features = ["full"] }
 log = "0.4"
 libp2p-quic = { version = "0.9.2", features = ["tokio"] }
+tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
