add hyper_util server example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -3,6 +3,8 @@
 resolver = "2"
 
 members = [
+        "hyper_util_client_example",
+        "hyper_util_server_example",
         "hyper_basic_example",
         "hyper_service_fn_example",
 ]
