--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -6,6 +6,7 @@ members = [
         "hyper_util_client_example",
         "hyper_util_server_example",
         "hyper_multi_server_example",
+        "hyper_params_example",
         "hyper_basic_example",
         "hyper_service_fn_example",
 ]
