--- a/tarpc_workspace_example/tarpc_service_example/Cargo.toml
+++ b/tarpc_workspace_example/tarpc_service_example/Cargo.toml
@@ -6,18 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
-clap = {version = "4.3.19", features = ["derive"] }
-futures = "0.3.28"
-log = "0.4.19"
-opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
-opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
+anyhow = "1.0.75"
+clap = {version = "4.4.8", features = ["derive"] }
+futures = "0.3.29"
+log = "0.4.20"
+opentelemetry = "0.21.0"
+opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio", "collector_client"] }
+opentelemetry_sdk = { version = "0.21.1", features = ["tokio", "rt-tokio", "tokio-stream"] }
 rand = "0.8.5"
 tarpc = { version = "0.33.0", features = ["full"] }
-tokio = { version = "1.29.1", features = ["full"] }
-tracing = "0.1.37"
-tracing-opentelemetry = "0.17.4"
-tracing-subscriber = { version = "0.3.17", features = ["env-filter","std"] }
+tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-opentelemetry = "0.22.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter","std"] }
 
 
 [lib]
