--- a/axum_workspace_example/axum_websocket_client_example/Cargo.toml
+++ b/axum_workspace_example/axum_websocket_client_example/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.6.20", features = ["ws", "headers"] }
-axum-extra = "0.8.0"
+axum = { version = "0.7.1", features = ["ws"] }
+axum-extra = "0.9.0"
 futures = "0.3.29"
 futures-util = "0.3.29"
-headers = "0.3.9"
+headers = "0.4.0"
 tokio = { version = "1.34.0", features = ["full"] }
 tokio-tungstenite = "0.20.1"
-tower-http = { version = "0.4.4", features = ["fs", "trace"] }
+tower-http = { version = "0.5.0", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter", "std"] }
