--- a/actix_web_workspace_example/Cargo.toml
+++ b/actix_web_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "actix_web_health_check_example",
         "actix_web_integration_test_example",
         "actix_web_protobuf_basic_example",
+        "actix_web_openssl_example",
 ]
