add tokio boxfuture channel example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -165,4 +165,5 @@ members = [
         "tokio_intofuture_example",
         "tokio_send_future_via_channel_example",
         "tokio_channel_of_channel_example",
+        "tokio_boxfuture_channel_example",
 ]
