--- a/macro_workspace_example/Cargo.toml
+++ b/macro_workspace_example/Cargo.toml
@@ -22,4 +22,5 @@ members = [
         "derive_hello2_example",
         "macro_in_other_file_example",
         "macro_stringify_example",
+        "macro_pat_param_example",
 ]
