--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -169,4 +169,5 @@ members = [
         "tokio_channel_boxfuture_channel_example",
         "tokio_async_stream_try_stream_example",
         "tokio_stream_impl_stream_example",
+        "tokio_stream_return_remaing_stream_example",
 ]
