add tokio_stream tcpstream return byte example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -171,4 +171,5 @@ members = [
         "tokio_stream_impl_stream_example",
         "tokio_stream_return_remaing_stream_example",
         "tokio_stream_tcpstream_into_stream_example",
+        "tokio_stream_tcpstream_return_byte_exampe",
 ]
