--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -174,4 +174,5 @@ members = [
         "tokio_stream_tcpstream_return_byte_exampe",
         "tokio_stream_try_stream_return_vec_u8_example",
         "tokio_async_stream_stream_macro_example",
+        "tokio_pin_mut_fusefuture_basic_example",
 ]
