add tokio Future<Stream>, Stream<Future> example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -178,4 +178,6 @@ members = [
         "tokio_async_fuse_example",
         "tokio_pin_stream_basic_example",
         "tokio_future_into_stream_example",
+        "tokio_future_stream_example1",
+        "tokio_stream_future_example",
 ]
