add tokio stream of stream example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -181,4 +181,5 @@ members = [
         "tokio_future_stream_example1",
         "tokio_stream_future_example",
         "tokio_future_of_future_example",
+        "tokio_stream_of_stream_example",
 ]
