--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -183,4 +183,5 @@ members = [
         "tokio_future_of_future_example",
         "tokio_stream_of_stream_example",
         "tokio_rustls_server_example",
+        "tokio_metrics_runtimemonitor_example",
 ]
