--- a/quinn_workspace_example/quinn_server_example/Cargo.toml
+++ b/quinn_workspace_example/quinn_server_example/Cargo.toml
@@ -11,8 +11,9 @@ clap = { version = "4.4.10", features = ["derive"] }
 directories-next = "2.0.0"
 quinn = "0.10.2"
 rcgen = "0.11.3"
-rustls = "0.21.0"
-rustls-pemfile = "1.0.0"
+rustls = "0.22.0"
+rustls-pemfile = "2.0.0"
+rustls-pki-types = "1.0.0"
 tokio = { version = "1.34.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-futures = "0.2.5"
