add ring hmac digest example

--- a/ring_workspace_example/Cargo.toml
+++ b/ring_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "basic_ring_example",
         "ring_example",
         "ring_sha256_digest_example",
+        "ring_hmac_digest_example",
 ]
