--- a/reqwest_workspace_example/reqwest_streams_example/Cargo.toml
+++ b/reqwest_workspace_example/reqwest_streams_example/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.20"
-axum-streams = { version = "0.10.0", features = ["protobuf"] }
+axum = "0.7.2"
+axum-streams = { version = "0.11.0", features = ["protobuf"] }
 futures = "0.3.29"
-hyper = "1.0.0"
-prost = "0.12.2"
+hyper = "1.0.1"
+prost = "0.12.3"
 reqwest = "0.11.22"
-reqwest-streams = { version = "0.4.0", features = ["protobuf"] }
-tokio = { version = "1.34.0", features = ["full"] }
+reqwest-streams = { version = "0.5.1", features = ["protobuf"] }
+tokio = { version = "1.35.0", features = ["full"] }
+tokio-stream = { version = "0.1.14", features = ["full"] }
 tower = "0.4.13"
