--- a/libp2p_workspace_example/libp2p_tokio_autonat_client_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_autonat_client_example/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.4.4", features = ["derive"] }
-env_logger = "0.10.0"
-futures = "0.3.28"
-libp2p = { version = "0.52.3", features = ["full"] }
-tokio = { version = "1.32.0", features = ["full"] }
+clap = { version = "4.4.11", features = ["derive"] }
+env_logger = "0.10.1"
+futures = "0.3.29"
+libp2p = { version = "0.53.1", features = ["full"] }
+tokio = { version = "1.35.0", features = ["full"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
