--- a/libp2p_workspace_example/libp2p_tokio_file_sharing_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_file_sharing_example/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.4.4", features = ["derive"] }
+clap = { version = "4.4.11", features = ["derive"] }
 either = "1.9.0"
-env_logger = "0.10.0"
-futures = "0.3.28"
-libp2p = { version = "0.52.3", features = ["full"] }
-serde = { version = "1.0.188", features = ["derive"] }
-tokio = { version = "1.32.0", features = ["full"] }
-uuid = "1.4.1"
+env_logger = "0.10.1"
+futures = "0.3.29"
+libp2p = { version = "0.53.1", features = ["full"] }
+serde = { version = "1.0.193", features = ["derive"] }
+tokio = { version = "1.35.0", features = ["full"] }
+uuid = "1.6.1"
 void = "1.0.2"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
