--- a/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
@@ -6,9 +6,17 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.73"
+async-trait = "0.1.74"
 either = "1.9.0"
-env_logger = "0.10.0"
-futures = "0.3.28"
-libp2p = { version = "0.52.3", features = ["full"] }
-tokio = { version = "1.32.0", features = ["full"] }
+env_logger = "0.10.1"
+futures = "0.3.29"
+hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
+libp2p = { version = "0.53.1", features = ["full"] }
+opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
+opentelemetry-otlp = { version = "0.13.0", features = ["metrics"]}
+opentelemetry_api = "0.20.0"
+prometheus-client = "0.22.0"
+tokio = { version = "1.34.0", features = ["full"] }
+tracing = "0.1.37"
+tracing-opentelemetry = "0.21.0"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
