--- a/libp2p_workspace_example/libp2p_tokio_ping_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_ping_example/Cargo.toml
@@ -10,4 +10,6 @@ async-trait = "0.1.74"
 console-subscriber = "0.2.0"
 futures = "0.3.29"
 libp2p = { version = "0.53.1", features = ["full"] }
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.35.0", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
