add s2n-quic post quantum example

--- a/s2n_quic_workspace_example/Cargo.toml
+++ b/s2n_quic_workspace_example/Cargo.toml
@@ -5,4 +5,6 @@ resolver = "2"
 members = [
         "s2n_quic_server_example",
         "s2n_quic_client_example",
+        "s2n_quic_post_quantum_server_example",
+        "s2n_quic_post_quantum_client_example",
 ]
