--- a/tarpc_workspace_example/tarpc_service_server_example/Cargo.toml
+++ b/tarpc_workspace_example/tarpc_service_server_example/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["env", "derive"] }
 futures = "0.3.29"
 opentelemetry = "0.21.0"
