add arc tokio::sync::mutex example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -185,4 +185,5 @@ members = [
         "tokio_rustls_server_example",
         "tokio_metrics_runtimemonitor_example",
         "tokio_rocket_basic_example",
+        "arc_tokio_mutex_example",
 ]
