--- a/poem_workspace_example/Cargo.toml
+++ b/poem_workspace_example/Cargo.toml
@@ -7,4 +7,5 @@ members = [
         "poem_openapi_example",
         "poem_websocket_example",
         "poem_openapi_tarpc_service_server_example",
+        "poem_openapi_generics_example",
 ]
