--- a/poem_workspace_example/Cargo.toml
+++ b/poem_workspace_example/Cargo.toml
@@ -8,4 +8,5 @@ members = [
         "poem_websocket_example",
         "poem_openapi_tarpc_service_server_example",
         "poem_openapi_generics_example",
+        "poem_openapi_auth_multiple_example",
 ]
