--- a/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
@@ -10,7 +10,7 @@ byteorder = "1.5.0"
 clap = { version = "4.4.11", features = ["derive", "env"] }
 openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
 poem = "1.3.59"
-poem-openapi = "3.0.6"
+poem-openapi = { version = "3.0.6", features = ["swagger-ui", "email"] }
 reqwest = { version = "0.11.22", features = ["json"] }
 rocksdb = "0.21.0"
 serde = { version = "1.0.193", features = ["derive"] }
