enable poem and tarpc

--- a/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
@@ -20,7 +20,7 @@ tokio = { version = "1.35.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-futures = "0.2.5"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
-
+thiserror = "1.0.50"
 ## dependencies might be deleted
 async-trait = "0.1.74"
 tide = "0.16.0"
@@ -30,4 +30,4 @@ toy-rpc = { version = "0.8.6", features = [
   "client",
   "tokio_runtime",
 ] }
-thiserror = "1.0.50"
+futures = "0.3.29"
