--- a/chitchat_workspace_example/chitchat_example/Cargo.toml
+++ b/chitchat_workspace_example/chitchat_example/Cargo.toml
@@ -7,19 +7,19 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-axum = "0.6.20"
+# axum = "0.7.2"
 # chitchat = "0.5.0"
 chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-clap = { version = "4.4.8", features = ["derive"] }
+clap = { version = "4.4.11", features = ["derive"] }
 console-subscriber = "0.2.0"
 cool-id-generator = "1.0.1"
 env_logger = "0.10.1"
-once_cell = "1.18.0"
+once_cell = "1.19.0"
 poem = "1.3.59"
 poem-openapi = { version = "3", features = ["swagger-ui"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-tokio = { version = "1.34.0", features = ["full"] }
+tokio = { version = "1.35.0", features = ["full"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
