--- a/chitchat_workspace_example/Cargo.toml
+++ b/chitchat_workspace_example/Cargo.toml
@@ -5,4 +5,5 @@ resolver = "2"
 members = [
         "chitchat_example",
         "once_cell_chitchat_example",
+        "chitchat_poem_tarpc_rocksdb_example",
 ]
