--- a/openraft_workspace_example/raft_kv_memstore/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore/Cargo.toml
@@ -10,7 +10,7 @@ actix-web = "4.4.0"
 async-trait = "0.1.74"
 clap = { version = "4.4.11", features = ["derive", "env"] }
 env_logger = "0.10.1"
-openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde"]}
+openraft = {git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2"]}
 reqwest = { version = "0.11.22", features = ["json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
