--- a/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
+++ b/openraft_workspace_example/raft_poem_tarpc_rocksdb/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 clap = { version = "4.4.11", features = ["derive", "env"] }
-openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde"] }
+openraft = { git = "https://github.com/datafuselabs/openraft", features = ["serde", "storage-v2"] }
 poem = "1.3.59"
 poem-openapi = { version = "3.0.6", features = ["swagger-ui", "email"] }
 reqwest = { version = "0.11.23", features = ["json"] }
