--- a/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.76"
 bytes = "1.5.0"
-futures = "0.3.28"
-libp2p = { version = "0.52.3", features = ["full"] }
-rocket = { version = "0.5.0-rc.3", features = ["json"] }
-tokio = { version = "1.32.0", features = ["full"] }
-tokio-util = { version = "0.7.8", features = ["codec"] }
+futures = "0.3.29"
+libp2p = { version = "0.53.2", features = ["full"] }
+rocket = { version = "0.5.0", features = ["json"] }
+tokio = { version = "1.35.1", features = ["full"] }
+tokio-util = { version = "0.7.10", features = ["codec"] }
