add hyper service struct impl example

--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
         "hyper_params_example",
         # "hyper_basic_example",
         # "hyper_service_fn_example",
+        "hyper_service_struct_impl_example",
 ]
