--- a/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
@@ -6,17 +6,21 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-trait = "0.1.74"
+async-trait = "0.1.75"
+bytes = "1.5.0"
 either = "1.9.0"
 env_logger = "0.10.1"
-futures = "0.3.29"
-hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
-libp2p = { version = "0.53.1", features = ["full"] }
-opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
-opentelemetry-otlp = { version = "0.13.0", features = ["metrics"]}
+futures = "0.3.30"
+http-body-util = "0.1.0"
+hyper = { version = "1.1", features = ["full"]}
+hyper-util = { version = "0.1.2", features = ["full"] }
+libp2p = { version = "0.53.2", features = ["full"] }
+opentelemetry = { version = "0.21.0", features = ["metrics"] }
+opentelemetry-otlp = { version = "0.14.0", features = ["metrics"]}
 opentelemetry_api = "0.20.0"
+opentelemetry_sdk = {version = "0.21.1", features = ["rt-tokio", "metrics"]}
 prometheus-client = "0.22.0"
-tokio = { version = "1.34.0", features = ["full"] }
-tracing = "0.1.37"
-tracing-opentelemetry = "0.21.0"
+tokio = { version = "1.35.1", features = ["full"] }
+tracing = "0.1.40"
+tracing-opentelemetry = "0.22.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
