--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -7,7 +7,6 @@ members = [
         "hyper_util_server_example",
         "hyper_multi_server_example",
         "hyper_params_example",
-        # "hyper_basic_example",
-        # "hyper_service_fn_example",
         "hyper_service_struct_impl_example",
+        "hyper_echo_example",
 ]
