--- a/tokio_workspace_example/tokio_multi_log_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_multi_log_example/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hyper = { version = "0.14.27", features = ["server", "tcp", "http1"] }
+bytes = "1.5.0"
+http-body-util = "0.1.0"
+hyper = { version = "1.1.0", features = ["full"]}
+hyper-util = { version = "0.1.2", features = ["full"] }
 log = "0.4.20"
-once_cell = "1.18.0"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
-tokio = { version = "1.32.0", features = ["full"] }
+once_cell = "1.19.0"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
+tokio = { version = "1.35.1", features = ["full"] }
