--- a/pin_api_workspace_example/pin_project_example/Cargo.toml
+++ b/pin_api_workspace_example/pin_project_example/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "pin_project_lite_example"
+name = "pin_project_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pin-project-lite = "0.2.12"
-tokio = { version = "1.31.0", features = ["full"] }
+pin-project = "1.1.3"
+reqwest = { version = "0.11.23", features = ["json"] }
+tokio = { version = "1.35.1", features = ["full"] }
