serde workspace example

--- a/serde_workspace_example/serde_json_example/Cargo.toml
+++ b/serde_workspace_example/serde_json_example/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "serde_yaml_example"
+name = "serde_json_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = "1.0.130"
-serde_yaml = "0.8.21"
+serde_json = "1.0.111"
