--- a/serde_workspace_example/serde-basic-example/Cargo.toml
+++ b/serde_workspace_example/serde-basic-example/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
-name = "serde_json_example"
+name = "serde-basic-example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.64"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
+serde_yaml = "0.9.30"
