--- a/serde_workspace_example/serde-custom/Cargo.toml
+++ b/serde_workspace_example/serde-custom/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "serde_json_example2"
+name = "serde-custom"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.142", features = ["derive"] }
-serde_derive = "1.0.142"
-serde_json = "1.0.83"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
+serde_test = "1.0.176"
