--- a/serde_workspace_example/serde_json_example2/Cargo.toml
+++ b/serde_workspace_example/serde_json_example2/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "serde-custom"
+name = "serde_json_example2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
-serde_test = "1.0.130"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_derive = "1.0.195"
+serde_json = "1.0.111"
