--- a/serde_workspace_example/serde_yaml_example/Cargo.toml
+++ b/serde_workspace_example/serde_yaml_example/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
-name = "serde-basic-example"
+name = "serde_yaml_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
-serde_yaml = "0.8.21"
+serde = "1.0.195"
+serde_yaml = "0.9.30"
