add buffer stream example

--- a/async_stream_workspace_example/Cargo.toml
+++ b/async_stream_workspace_example/Cargo.toml
@@ -6,4 +6,5 @@ members = [
         "async_stream_example",
         "stream_example1",
         "stream_example2",
+        "buffer_stream_example",
 ]
