add closure to fn pointer example

--- a/closure_explain_workspace_example/Cargo.toml
+++ b/closure_explain_workspace_example/Cargo.toml
@@ -13,4 +13,5 @@ members = [
         "escape_closure_example",
         "closure_lieftime_example",
         "store_closure_example",
+        "closure_to_fn_pointer_example",
 ]
