--- a/futures_workspace_example/future_abortable_example/Cargo.toml
+++ b/futures_workspace_example/future_abortable_example/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "futures_example2"
+name = "future_abortable_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.13"
+futures = "0.3.30"
+tokio = { version = "1.35.1", features = ["full"] }
