--- a/futures_workspace_example/future_move_example/Cargo.toml
+++ b/futures_workspace_example/future_move_example/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "futures_example"
+name = "future_move_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.13"
+futures = "0.3.30"
