--- a/futures_workspace_example/futures_example/Cargo.toml
+++ b/futures_workspace_example/futures_example/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "future_abortable_example"
+name = "futures_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.24"
-tokio = { version = "1.21.1", features = ["full"] }
+futures = "0.3.30"
