--- a/futures_workspace_example/futures_example2/Cargo.toml
+++ b/futures_workspace_example/futures_example2/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "future_move_example"
+name = "futures_example2"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3.15"
+futures = "0.3.30"
