add pin box dyn future example

--- a/futures_workspace_example/Cargo.toml
+++ b/futures_workspace_example/Cargo.toml
@@ -16,4 +16,5 @@ members = [
         "futures_stream_example",
         "tokio_color_eyre_example",
         "tokio_reqwest_example",
+        "pin_box_dyn_future_example",
 ]
