add pin box dyn future example 3

--- a/futures_workspace_example/Cargo.toml
+++ b/futures_workspace_example/Cargo.toml
@@ -18,5 +18,6 @@ members = [
         "tokio_reqwest_example",
         "pin_box_dyn_future_example",
         "pin_box_dyn_future_example2",
+        "pin_box_dyn_future_example3",
         "future_in_future_example",
 ]
