add enum multi pin box dyn future example

--- a/futures_workspace_example/Cargo.toml
+++ b/futures_workspace_example/Cargo.toml
@@ -19,5 +19,6 @@ members = [
         "pin_box_dyn_future_example",
         "pin_box_dyn_future_example2",
         "pin_box_dyn_future_example3",
+        "enum_multi_pin_box_dyn_future_example",
         "future_in_future_example",
 ]
