add tokio sink example

--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -188,4 +188,5 @@ members = [
         "arc_tokio_mutex_example",
         "tokio_convert_channel_to_stream_example",
         "tokio_poll_unpin_example",
+        "tokio_sink_example",
 ]
