add option result transpose example

--- a/option_result_workspace_example/Cargo.toml
+++ b/option_result_workspace_example/Cargo.toml
@@ -17,4 +17,5 @@ members = [
         "combinator_or_and_example",
         "combinator_or_else_example",
         "combinator_unwrap_or_example",
+        "option_resutl_transpose_example",
 ]
